# mif

./: Cargo.toml  README.md
.github/workflows/: cross_comp_pi5.yaml  cross_comp_ubuntu.yaml
src/: image_utils.rs  main.rs  sound_utils.rs
